force-app/main/default/objects/vlocity_cmt__SpecTemplateAttributeMapping__c/fields/vlocity_cmt__MappedAttributeId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__MappedAttributeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the attributes associated with/ without ObjectType to be mapped to spec template attributes.</description>
    <label>Mapped Attribute</label>
    <referenceTo>vlocity_cmt__Attribute__c</referenceTo>
    <relationshipLabel>Spec Template Attribute Mappings</relationshipLabel>
    <relationshipName>TemplateAttributeMappings</relationshipName>
    <type>Lookup</type>
</CustomField>