force-app/main/default/objects/vlocity_cmt__SpecTemplateAttributeMapping__c/fields/vlocity_cmt__MappedPricingVariableId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__MappedPricingVariableId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the attributes associated with pricing variable to be mapped to spec template attributes.</description>
    <label>Mapped Pricing Variable</label>
    <referenceTo>vlocity_cmt__PricingVariable__c</referenceTo>
    <relationshipLabel>Spec Template Attribute Mappings</relationshipLabel>
    <relationshipName>SpecTemplateAttributeMappings</relationshipName>
    <type>Lookup</type>
</CustomField>