force-app/main/default/objects/vlocity_cmt__SpecTemplateAttributeMapping__c/fields/vlocity_cmt__SpecTemplateMappingId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__SpecTemplateMappingId__c</fullName>
    <description>Defines the spec template Mapping to which the attribute mapping records are stored.</description>
    <label>Spec Template Mapping</label>
    <referenceTo>vlocity_cmt__SpecTemplateMapping__c</referenceTo>
    <relationshipLabel>Spec Template Attribute Mappings</relationshipLabel>
    <relationshipName>SpecTemplateAttributeMappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>